2005-08-08  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Make handle_infon_block() return InfoN level
	out-of-band if called in array context.
	* Validation.pm: Don't allow literal "InfoN" field.

2005-08-05  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: .info fieldnames are canonically lower-case

2005-08-05  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm, Package.pm, SelfUpdate.pm, Services.pm:
	Naively decouple Shlibs and Package.

2005-08-04  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Engine.pm, PkgVersion.pm: Incremental indexing improvements:
		- Race condition removal
		- Nice error messages if part of DB is missing or corrupt
		- Takes into account date of .info file, so should now work with
		selfupdate-rsync
		- Has db_valid_since method to be used by FinkCommander for caching DB
		- forget_packages should actually forget everything

2005-08-04  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Use a dummy HOME when running *Script.

2005-08-04  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Clean up darwin version check.

2005-08-04  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Configure.pm: Auto-detect user's country.

2005-07-30  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: infon isn't always present.

2005-07-30  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm, PkgVersion.pm: Have read_properties* use an options hash
	rather than ordered parameters. Add an option for python-style whitespace
	removal on both top-level and heredocs.
	* Package.pm, PkgVersion.pm: Use new option for Info3+
	* PkgVersion.pm: Don't strip whitespace from SplitOffs if Info3+, let
	read_properties* do that.
	
2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Only use Info3 feature with Info3 or higher.
	
2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* FinkVersion.pm.in: Say hello to Info3.
	