@@ -1,3 +1,12 @@
+2005-08-09  Daniel Macks  <dmacks@netspace.org>
+
+	* Package.pm: New functions lol_pkglist2pv (converts dpkg pkglist
+	structure into PkgVersion-object structure) and spec2pv (finds all
+	PV that satisfy a name and optional version req).
+
+	* PkgVersion.pm phase_activate first recursively removes pkgs that
+	are BDO:true and listed in both Conflicts and Replaces.
+
 2005-08-08  Daniel Macks  <dmacks@netspace.org>
 
 	* Package.pm: Make handle_infon_block() return InfoN level
